@@ -1,4 +1,5 @@
 - added pairwise()
+- added is_seqcont()
 - greatly optimized @decorator
 - added @log_durations and @print_durations
 - @logs_calls and @print_calls now provide call signature on return
